# WWINPy

./: .gitignore  .readthedocs.yaml  README.md  docs-requirements.txt  pyproject.toml
docs/source/: conf.py  features.rst  getting_started.rst  index.rst  installation.rst  license.rst  modules.rst  welcome.rst  wwinpy.rst  wwpy.rst
docs/source/_autosummary/: wwpy.exceptions.rst  wwpy.geometry.rst  wwpy.query.rst  wwpy.ratios.rst  wwpy.rst  wwpy.utils.rst  wwpy.ww_data.rst
examples/: 3D_legendMesh.py  example_parser.ipynb  example_plotter.py  example_ratios.ipynb  example_test_parser.ipynb  wwinp_ueki
test/: test_parser.py  test_query.py
wwinpy/: weight_windows.py  ww_data.py
wwpy/: __init__.py  _exceptions.py  _utils.py  exceptions.py  geometry.py  header.py  mesh.py  models.py  parser.py  plotter.py  query.py  ratios.py  utils.py  weight_windows.py  ww_data.py
