[tool.poetry]
name = "wwpy"
version = "0.1.0"
description = "Python library to parse and work with weight window files"
authors = ["Juan Antonio Monleon de la Lluvia <juanmonleon96@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.24.1"
pandas = "^2.2.3"
nbformat = "^5.10.4"
pyvista = "^0.44.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^3.0.0"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.0"
sphinx-autobuild = "^2024.10.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
